--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -31,6 +31,6 @@ randomLogGenerator {
   awsBucket = "peppe-bucket-test"
   awsKey = "input.log"
 
-  awsAccessKey = "AKIAQAMEMXFB3HP4CVBR"
-  awsSecretKey = "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"
+  awsAccessKey = ""
+  awsSecretKey = ""
 }
